src/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Crimson+Text:ital@0;1&family=Tenor+Sans&display=swap");

:root {
  /* change the values below to your colors from your palette */
  --primary-color: #1f97a6;
  --secondary-color: #17c3b2;
  --accent1-color: #fed6d0;
  --accent2-color: #fef9ef;

  /* change the values below to your chosen font(s) */
  --heading-font: "Crimson Text", Serif;
  --paragraph-font: "Tenor Sans", serif, Helvetica;

  /* these colors below should be chosen from among your palette colors above */
  --headline-color-on-white: #1f97a6; /* headlines on a white background */
  --headline-color-on-color: #17c3b2; /* headlines on a colored background */
  --paragraph-color-on-white: #1f97a6; /* paragraph text on a white background */
  --paragraph-color-on-color: #221818; /* paragraph text on a colored background */
  --paragraph-background-color: #fed6d0;
  --nav-link-color: #1f97a6;
  --nav-background-color: #fed6d0;
  --nav-hover-link-color: #fef9ef;
  --nav-hover-background-color: #17c3b2;
}

body {
  background-color: var(--accent2-color);
  margin: 20px auto;
  max-width: 1600px;
}

.anime-info img {
  display: block; /* Ensure the image is displayed as a block element */
  max-width: 100%; /* Ensure the image does not exceed the width of its container */
  max-height: 100%; /* Ensure the image does not exceed the height of its container */
  border-radius: 20px;
  margin: 0 auto; /* Center the image horizontally */
}

.anime-info p {
  text-align: center;
}

.anime-info h3 {
  text-align: center;
  font-size: 20px;
}

#selection {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  padding-left: 30px;
  padding-right: 30px;
  gap: 20px;
}

.anime-info {
  border-radius: 30px;
  padding-left: 10px;
  padding-right: 10px;
  background-color: var(--paragraph-background-color);
  cursor: pointer;
}

select#anime {
  text-align: center;
  margin-bottom: 20px;
  width: 100%;
  padding: 10px;
  font-size: 16px;
  border: 1px solid #ccc;
  border-radius: 5px;
  appearance: none; /* Remove default appearance */
  background-color: var(--headline-color-on-color);
  color: #555;
  cursor: pointer;
}

/* Style options */
select#anime option {
  background-color: #fff;
  color: #555;
}

/* Style selected option */
select#anime option:checked {
  background-color: #f0f0f0;
}

/* Hide dropdown arrow */
select#anime::-ms-expand {
  display: none;
}

select#anime option {
  background-color: var(--headline-color-on-color);
}

.modal-overlay {
  display: none; /* Hidden by default */
  position: fixed;
  z-index: 1000;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.7);
  justify-content: center;
  align-items: center;
}

.modal-content {
  background-color: #f0f0f0; /* A light grey for better contrast */
  color: #333; /* Darker text color */
  margin: auto;
  padding: 25px;
  border-radius: 10px;
  width: 90%;
  max-width: 650px;
  position: relative;
  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
  animation: fadeIn 0.3s;
}

.close-button {
  color: #aaa;
  position: absolute;
  top: 10px;
  right: 20px;
  font-size: 28px;
  font-weight: bold;
}

.close-button:hover,
.close-button:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.modal-overlay.active {
  display: flex;
}

/* New styles for links inside the modal */
.modal-links a {
  display: inline-flex;
  align-items: center;
  background-color: #65c3e8;
  color: #333;
  padding: 5px 10px;
  margin: 5px 5px 5px 0;
  border-radius: 5px;
  text-decoration: none;
  font-size: 0.9em;
  transition: background-color 0.2s;
  border: 1px solid #ddd;
}

.modal-links a:hover {
  background-color: #62f3c0;
}

.modal-links img {
  width: 20px !important; /* Override inline styles */
  height: 20px !important;
  vertical-align: middle;
  margin-right: 8px !important;
}

@keyframes fadeIn {
  from {opacity: 0;}
  to {opacity: 1;}
}

.loader {
  grid-column: 1 / -1; /* Make it span all grid columns */
  text-align: center;
  font-size: 1.5em;
  color: var(--primary-color);
  padding: 40px;
}

